--- a/multiview.html
+++ b/multiview.html
@@ -4,19 +4,18 @@
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
 		<style>
-			#page, html, body {height: 100%; margin: 0; padding: 0;}
+			#page, html, body, iframe {height: 100%; width:100%; margin: 0; padding: 0;}
+			#page {display: flex; flex-direction:row; width: 100%;  align-items: stretch; }
 			body {overflow: hidden;}
 			#fw1 {flex-grow:1;}
 			#fw2 {width: 33%;}
-			#f1, #f2 {width:100%; height: 100%;}
-			#page {display: flex; flex-direction:row; width: 100%;  align-items: stretch; }
 		</style>
 		<script src='./multiview.js'></script>
 	</head>
 	<body>
 		<div id='page'>
-			<div id='fw1' class="framewrap"><iframe id='f1'></iframe></div>
-			<div id='fw2' class="framewrap"><iframe id='f2'></iframe></div>
+			<div id='fw1' class="framewrap"></div>
+			<div id='fw2' class="framewrap"></div>
 		</div>
 	</body>
 </html>
